tratamento de erro caso input seja vazio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 
-			<h2 id="error-text" class="hide">Erro</h2>
+			<h3 id="error-text" class="hide"></h3>
 
 			<div id="weather-data" class="hide">
 				<h2>
